--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -67,6 +67,7 @@ header {
 
 #menu a{
     text-decoration: none;
+    color: rgb(92, 48, 12);
 }
 
 #gallery, .button-div {
@@ -178,3 +179,4 @@ footer{
 footer p {
     margin: 0px;
 }
+
