--- a/trab3/css/estilo.css
+++ b/trab3/css/estilo.css
@@ -151,27 +151,27 @@ header {
 
 #p1{
     grid-area: 1/1/3/2;
-    background-image: url("./imgs/foto-painel-1.webp");
+    background-image: url("../imgs/foto-painel-1.webp");
 }
 #p2{
     grid-area: 1/2/2/3;
-    background-image: url("./imgs/foto-painel-2.webp");
+    background-image: url("../imgs/foto-painel-2.webp");
 }
 #p3{
     grid-area: 1/3/3/4;
-    background-image: url("./imgs/foto-painel-3.webp");
+    background-image: url("../imgs/foto-painel-3.webp");
 }
 #p4{
     grid-area: 4/2/2/3;
-    background-image: url("./imgs/foto-painel-4.webp");
+    background-image: url("../imgs/foto-painel-4.webp");
 }
 #p5{
     grid-area: 3/1/4/2;
-    background-image: url("./imgs/foto-painel-5.webp");
+    background-image: url("../imgs/foto-painel-5.webp");
 }
 #p6{
     grid-area: 3/3/3/4;
-    background-image: url("./imgs/foto-painel-6.webp");
+    background-image: url("../imgs/foto-painel-6.webp");
 }
 
 footer{
@@ -181,4 +181,5 @@ footer{
 footer p {
     margin: 0px;
 }
+
 
